sample/asm/errors/unknown_instruction.asm
.function: main/1
    prnt (strstore "Hello World!")
    izero 0
    return
.end
